--- a/css/login-survery.css
+++ b/css/login-survery.css
@@ -5,11 +5,13 @@
 .acount-info form {
   padding: 35px;
 }
+
 .acount-info h3 {
   color: white;
+  font-size: 16px;
 }
 .acount-info {
-  background-image: url("../image/computer.jpeg");
+  background-image: url("../image/Lighthouse.jpg");
   background-size: cover;
   color: rgb(84, 78, 143);
   font-family: sans-serif;
@@ -17,27 +19,32 @@
 }
 .acount-info .mains .surver-page p {
   padding-top: 30px;
-
+  color: white;
   text-align: center;
-  font-size: 30px;
+  font-size: 35px;
 }
 .acount-info .mains p {
   text-align: center;
-  padding-bottom: 15px;
+  padding-bottom: 16px;
+}
+.acount-info .mains i {
+  color: white;
+  font-size: 16px;
 }
 .choose h6 {
   margin-top: 4px;
-  color: aliceblue;
+  color: white;
+  font-size: 12px;
 }
 .acount-info .choose {
   display: flex;
-  font-size: 18px;
+  font-size: 16px;
   font-family: sans-serif;
   margin-top: 25px;
   gap: 10px;
 }
 .choose p {
-  color: aliceblue;
+  color: white;
 }
 
 select {
@@ -51,17 +58,17 @@ select {
 }
 .radio {
   color: white;
-  font-size: 18px;
+  font-size: 15px;
   font-weight: bolder;
 }
 .radio .check input {
-  height: 16px;
-  width: 16px;
+  height: 15px;
+  width: 15px;
 }
 .acount-info .page-info {
   background-color: rgba(38, 38, 77, 0.8);
   margin-top: 50px;
-  width: 70%;
+  width: 60%;
   height: 120%;
   margin: auto;
 }
@@ -79,14 +86,14 @@ input[type="password"] {
 }
 
 .acount-info .textfield .comment-box textarea {
-  background-color: aliceblue;
+  background-color: rgb(250, 250, 250);
   color: rgb(51, 47, 47);
   padding: 5px 10px;
   border-radius: 3px;
   border: none;
   outline: 1px solid;
   height: 100px;
-  width: 90.5%;
+  width: 97%;
   margin-top: 10px;
 }
 
